# calculator-demo-project

./: README.md  pyproject.toml
src/calculator/: __init__.py  core.py
tests/: test_advanced.py  test_basic.py
